tests/valid/expressions/v22_unary_minus.f
program uminus
  integer x, y
  x = 5
  y = -x
  print *, y
end
