tests/invalid/structure/i11_missing_end.f
program noend
  integer x
  x = 5
  print *, x
